WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282523
[visionOS] Tapping on "View Spatial" button does not work in first go.
https://bugs.webkit.org/show_bug.cgi?id=282523
Summary
[visionOS] Tapping on "View Spatial" button does not work in first go.
Jean-Yves Avenard [:jya]
Reported
2024-11-03 21:24:41 PST
Summary: Tapping on "View Spatial" button does not work in first go. Steps To Reproduce: 1. Launch Safari with below setup. 2. Load webpage:
https://jyavenard.github.io/htmltests/tests/spatial/
3. Tap on Div Element Full Screen. 4. Tap on View Spatial Button to enter Portal Mode. 5. Exit Portal Mode. 6. Repeat steps 4-5 again. 7. Tapping on View Spatial Button will not work in first go.
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2024-11-03 21:25:06 PST
rdar://138883315
Jean-Yves Avenard [:jya]
Comment 2
2024-11-03 21:32:48 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36113
EWS
Comment 3
2024-11-04 17:09:33 PST
Committed
286130@main
(f486c204f4dd): <
https://commits.webkit.org/286130@main
> Reviewed commits have been landed. Closing PR #36113 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug