[visionOS] Tapping on "View Spatial" button does not work in first go. https://bugs.webkit.org/show_bug.cgi?id=282523 rdar://138883315

Reviewed by Jer Noble.

As soon as we exit spatial portal, the element fullscreen button in the top rows were showing.
There actions however wouldn't start until we have fully completed the operation of exiting fullscreen.

We now hide the buttons as soon as they have been pressed and will only show them again once the content process
has notified the UI process that the operation has been completed.

Manually tested.

* Source/WebKit/UIProcess/ios/fullscreen/WKFullScreenViewController.mm:
(-[WKFullScreenViewController _enterVideoFullscreenAction:]):
* Source/WebKit/UIProcess/ios/fullscreen/WKFullScreenWindowControllerIOS.mm:
(-[WKFullScreenWindowController didCleanupFullscreen]):

Canonical link: https://commits.webkit.org/286130@main